Bug 1711176 - Make nsMsgDatabase::Close() invalidate any outstanding enumerators. r=mkmelin

Includes a fix to nsMsgDBFolder::ReadDBFolderInfo(), where it was closing the
database while others were still using it.

Differential Revision: https://phabricator.services.mozilla.com/D115769

--HG--
extra : moz-landing-system : lando